--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,6 +32,11 @@
       font-family: 'Open Sans', sans-serif;
     }
 
+    .textContainer h3 {
+      color: #c69d4b;
+      font-family: 'Open Sans', sans-serif;
+    }
+
     .textContainer p {
       color: #374151;
       font-family: 'Open Sans', sans-serif;
@@ -66,17 +71,34 @@
       <li>Teste Técnico no Google Planilhas</li>
       <li>Preenchimento do Formulário</li>
       <li>Entrevista Final (Google Hangouts)</li>
-    </ol> 
+    </ol>
 
-    <h2>Instruções para realizar o teste:</h2>
-    <p>O teste enviado será no Google Sheets, você não precisa instalar nenhum tipo de
-      programa de pacote office no seu computador, apenas abra o link recebido no email
-      diretamente no seu Navegador, Google Chrome, Firefox ou Edge. Se você já teve
-      contato com o Excel, o Google Sheets tem as mesmas Formulas. Por favor realize o
+    <h2>Teste de Personalidade - Instruções e Link:</h2>
+    <p>O teste de personalidade é composto de perguntas e respostas.</p>
+    <ul>
+      <li>Demora menos de 12 minutos.</li>
+      <li>Responda honestamente (mesmo se você não gostar da resposta).</li>
+      <li>Tente não deixar nenhuma resposta no “neutro”.</li>
+    </ul>
+    <a href="https://www.16personalities.com/br/teste-de-personalidade" target="_blank" rel="noopener noreferrer">
+      <p>Link do Teste: clique aqui para abrir o link do teste de personalidade</p>
+    </a>
+
+    <h2>Teste Google Planilhas - Instruções e Link:</h2>
+
+    <p>O teste será realizado no Google Planilhas, você não precisa instalar nenhum tipo de
+      programa de pacote office no seu computador, apenas abra o link abaixo ( No smartphone é possivel baixar o
+      aplicativo Google Planilhas, mas recomendamos o uso de um computador ).Por favor realize o
       teste com o seu próprio conhecimento, não peça pra outras pessoas realizarem por
       você, na entrevista final vamos fazer perguntas técnicas para validar o seu
-      conhecimento.</p>
-    <h2>Requisítos:</h2>
+      conhecimento. </p>
+    <a href="https://support.google.com/docs/table/25273?hl=pt-BR" target="_blank" rel="noopener noreferrer">
+      <p>Consulte a documentação do Google Planilhas</p>
+    </a>
+    <a href="http://www.google.com.br" target="_blank" rel="noopener noreferrer">
+      <p>Link do Teste : clique aqui para abrir o link do seu teste online</p>
+    </a>
+    <h3>Teste Google Planilhas: Requisítos</h3>
     <ul>
       <li>Coluna COMISSÃO PROFISSIONAL:</li>
       <p>Somar a porcentagem de 65% baseado no valor total do serviço realizado pela
@@ -91,8 +113,15 @@
         'pizza', mostrando a porcentagem de cada um.</p>
     </ul>
 
-    <h2>Exemplo de Planilha finalizada:</h2>
+    <h3>Exemplo de Planilha finalizada:</h3>
     <img src="./planilha_exemplo.png" alt="planilha_exemplo">
+
+    <h2>Preenchimento do Formulário:</h2>
+    <p>Preencha o formulário apenas quando terminar os dois ultimos testes ( Google Planilhas e Teste de Personalidade),
+      o envio do formulário será o aviso que voce terminou todas as atividade,e assim poderemos seguir com a sua
+      avaliação para a etapa final.</p>
+    <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+    <p>Link do Formulário</p>
   </div>
 
 </body>
