--- a/src/views/index.html
+++ b/src/views/index.html
@@ -122,6 +122,8 @@
       avaliação para a etapa final.</p>
     <a href="http://" target="_blank" rel="noopener noreferrer"></a>
     <p>Link do Formulário</p>
+
+    <h1>Data Limite para entrega: 25/08/2022</h1>
   </div>
 
 </body>
