ejs config with nodemailer

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -63,7 +63,7 @@
   </div>
   <div class="textContainer">
 
-    <h1>Olá Fulana!</h1>
+    <h1>Olá <%= name %>!</h1>
     <p>Seja bem vinda ao processo seletivo para a vaga: <b>Recepcionista</b></p>
     <p>Os Passos desse processo serão os seguintes:</p>
     <ol>
@@ -95,7 +95,7 @@
     <a href="https://support.google.com/docs/table/25273?hl=pt-BR" target="_blank" rel="noopener noreferrer">
       <p>Consulte a documentação do Google Planilhas</p>
     </a>
-    <a href="http://www.google.com.br" target="_blank" rel="noopener noreferrer">
+    <a href="<%= sheetsUrl %>" target="_blank" rel="noopener noreferrer">
       <p>Link do Teste : clique aqui para abrir o link do seu teste online</p>
     </a>
     <h3>Teste Google Planilhas: Requisítos</h3>
