--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,8 +13,8 @@
     }
 
     .logo {
-      width: 15%;
-      padding: 2%;
+      width: 25%;
+      padding: 5%;
     }
 
     .textContainer {
@@ -27,13 +27,10 @@
       font-weight: 600;
     }
 
-    .textContainer h2 {
+    .textContainer h2,
+    h3 {
       color: #c69d4b;
-      font-family: 'Open Sans', sans-serif;
-    }
-
-    .textContainer h3 {
-      color: #c69d4b;
+      font-weight: 400;
       font-family: 'Open Sans', sans-serif;
     }
 
@@ -47,7 +44,29 @@
       color: #374151;
       font-family: 'Open Sans', sans-serif;
       font-weight: 600;
-      list-style-type: disclosure-closed;
+    }
+
+    .li-auto {
+      color: #374151;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 600;
+      list-style-type: auto;
+    }
+
+    #line {
+      color: #c69d4b;
+      border-width: thin;
+      border-style: double;
+    }
+
+    #name {
+      text-align: center;
+      padding-bottom: 5%;
+    }
+
+    .footer{
+      padding: 5%;
+      text-align: center;
     }
   </style>
 
@@ -59,44 +78,50 @@
 <body>
 
   <div class="logoContainer">
-    <img class="logo" src="./logo_fcare.png" alt="logo_fcare">
+    <img class="logo" src="https://www.clinicafcare.com.br/logo.svg" alt="logo_fcare">
   </div>
+  <hr id="line">
   <div class="textContainer">
 
-    <h1>Olá <%= name %>!</h1>
+    <h1 id="name">Olá <%= name %>!</h1>
     <p>Seja bem vinda ao processo seletivo para a vaga: <b>Recepcionista</b></p>
-    <p>Os Passos desse processo serão os seguintes:</p>
-    <ol>
+    <p>As etapas deste processo seletivo serão definidos com os seguintes passos:</p>
+    <ol class="li-auto">
       <li>Teste de Personalidade</li>
       <li>Teste Técnico no Google Planilhas</li>
       <li>Preenchimento do Formulário</li>
       <li>Entrevista Final (Google Hangouts)</li>
     </ol>
 
-    <h2>Teste de Personalidade - Instruções e Link:</h2>
-    <p>O teste de personalidade é composto de perguntas e respostas.</p>
+    <h2>Teste de Personalidade<h3> Instruções e Link:</h3>
+    </h2>
+
     <ul>
       <li>Demora menos de 12 minutos.</li>
       <li>Responda honestamente (mesmo se você não gostar da resposta).</li>
       <li>Tente não deixar nenhuma resposta no “neutro”.</li>
     </ul>
+    <p>Após terminar este teste, anote o seu resultado para preencher no formulário da 3 Etapa - 'Preenchimento do
+      Formulário'.</p>
     <a href="https://www.16personalities.com/br/teste-de-personalidade" target="_blank" rel="noopener noreferrer">
       <p>Link do Teste: clique aqui para abrir o link do teste de personalidade</p>
     </a>
 
-    <h2>Teste Google Planilhas - Instruções e Link:</h2>
+    <h2>Teste Técnico no Google Planilhas <h3> Instruções e Link:</h3>
+    </h2>
 
     <p>O teste será realizado no Google Planilhas, você não precisa instalar nenhum tipo de
       programa de pacote office no seu computador, apenas abra o link abaixo ( No smartphone é possivel baixar o
-      aplicativo Google Planilhas, mas recomendamos o uso de um computador ).Por favor realize o
-      teste com o seu próprio conhecimento, não peça pra outras pessoas realizarem por
+      aplicativo Google Planilhas, mas recomendamos o uso de um computador ). Por favor, realize o
+      teste individualmente,se for preciso consulte a Documentação do Google, não peça pra outras pessoas realizarem por
       você, na entrevista final vamos fazer perguntas técnicas para validar o seu
       conhecimento. </p>
+
     <a href="https://support.google.com/docs/table/25273?hl=pt-BR" target="_blank" rel="noopener noreferrer">
-      <p>Consulte a documentação do Google Planilhas</p>
+      <p>Documentação do Google</p>
     </a>
-    <a href="<%= sheetsUrl %>" target="_blank" rel="noopener noreferrer">
-      <p>Link do Teste : clique aqui para abrir o link do seu teste online</p>
+    <a href="https://docs.google.com/spreadsheets/d/<%= urlSheet %>/edit?usp=sharing" target="_blank" rel="noopener noreferrer">
+      <p>Link do Teste : clique aqui para abrir o link do seu teste online do Google Planilhas</p>
     </a>
     <h3>Teste Google Planilhas: Requisítos</h3>
     <ul>
@@ -113,17 +138,25 @@
         'pizza', mostrando a porcentagem de cada um.</p>
     </ul>
 
-    <h3>Exemplo de Planilha finalizada:</h3>
-    <img src="./planilha_exemplo.png" alt="planilha_exemplo">
+    <a href="http://www.clinicafcare.com.br/planilha_exemplo.png" target="_blank" rel="noopener noreferrer">
+      <h3>Clique aqui para ver o exemplo de Planilha finalizada</h3>
+    </a>
 
     <h2>Preenchimento do Formulário:</h2>
     <p>Preencha o formulário apenas quando terminar os dois ultimos testes ( Google Planilhas e Teste de Personalidade),
       o envio do formulário será o aviso que voce terminou todas as atividade,e assim poderemos seguir com a sua
       avaliação para a etapa final.</p>
-    <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+    <a href="https://forms.gle/mohq1cajRJcGxrWp8" target="_blank" rel="noopener noreferrer"></a>
     <p>Link do Formulário</p>
 
     <h1>Data Limite para entrega: 25/08/2022</h1>
+
+    <div class="footer">
+
+      <a href="https://www.clinicafcare.com.br/" target="_blank" rel="noopener noreferrer">
+        <p>www.clinicafcare.com.br</p>
+      </a>
+    </div>
   </div>
 
 </body>
