feat: greet, sortCandidates

--- a/src/views/not-passed.ejs
+++ b/src/views/not-passed.ejs
@@ -45,7 +45,7 @@
       color: #374151;
       font-family: 'Open Sans', sans-serif;
       font-weight: 600;
-      
+
     }
 
     .li-auto {
@@ -89,11 +89,15 @@
 
     <h2 id="name">Olá <%= name %>!</h2>
 
-    <p>Boa Tarde!, </p>
-    <p>Obrigado pela sua candidatura à vaga de Recepcionista e por toda a disponibilidade.</p>
-    <p>Infelizmente você não foi a candidata escolhida. Fique atenta a nossa página do Linkedin em breve podemos abrir novas vagas.</p>
-    <a href="https://www.linkedin.com/company/clinica-f-care/" target="_blank" rel="noopener noreferrer">Acesse nosso Linkedin</a>
-    
+    <p>
+      <%= greet %> !
+    </p>
+    <p>Obrigado pela sua candidatura à vaga de Recepcionista.</p>
+    <p>Infelizmente você não foi a candidata escolhida. Fique atenta a nossa página do Linkedin, em breve podemos abrir
+      novas vagas.</p>
+    <a href="https://www.linkedin.com/company/clinica-f-care/" target="_blank" rel="noopener noreferrer">Acesse nosso
+      Linkedin</a>
+
     <div class="footer">
 
       <a href="https://www.clinicafcare.com.br/" target="_blank" rel="noopener noreferrer">
