--- a/src/views/passed.ejs
+++ b/src/views/passed.ejs
@@ -89,13 +89,15 @@
 
     <h2 id="name">Olá <%= name %>!</h2>
 
-    <p>Boa Tarde ! </p>
+    <p>
+      <%= greet %> !
+    </p>
     <iframe src="https://giphy.com/embed/Guccz4Oq87bncsm1j4" width="400" height="400" frameBorder="0"
       class="giphy-embed" allowFullScreen></iframe>
-    
+
     <p>Parabéns !!! Você passou para a próxima fase do processo seletivo !</p>
-    <p>Aguarde nosso contato para o agendamento da entrevista por Hangouts.</p>
-  
+    <p>Aguarde nosso contato via WhatsApp para o agendamento da entrevista por Hangouts.</p>
+
     <div class="footer">
 
       <a href="https://www.clinicafcare.com.br/" target="_blank" rel="noopener noreferrer">
